--- a/Frontend/translations.qrc
+++ b/Frontend/translations.qrc
@@ -1,4 +1,4 @@
-/*
+<!--
  * This file is part of QtMolMove.
  *
  * QtMolMove is free software: you can redistribute it and/or modify
@@ -14,33 +14,10 @@
  * You should have received a copy of the GNU General Public License
  * along with QtMolMove.  If not, see <http://www.gnu.org/licenses/>.
  *
- */
-
-#ifndef MAINWINDOW_H
-#define MAINWINDOW_H
-
-#include <QMainWindow>
-#include <QMessageBox>
-
-QT_BEGIN_NAMESPACE
-namespace Ui { class MainWindow; }
-QT_END_NAMESPACE
-
-class MainWindow : public QMainWindow //NOLINT (cppcoreguidelines-special-member-functions)
-{
-    Q_OBJECT
-
-private:
-    Ui::MainWindow *ui;
-
-    std::unique_ptr<QMessageBox> aboutMessageBox;
-
-public:
-    explicit MainWindow(QWidget *parent = nullptr);
-    ~MainWindow() override;
-
-private:
-    void ShowAboutDialog();
-};
-
-#endif // MAINWINDOW_H
+-->
+<RCC>
+    <qresource prefix="/">
+        <file>QtMolMove_de.qm</file>
+        <file>QtMolMove_en.qm</file>
+    </qresource>
+</RCC>
